#+
#§  \file       NEWS
#§  \brief      \$Id$
#§  
#§  (C) 2007 - NHI - #1 - Project - Group
#§  
#§  \version    \$Rev$
#§  \author     EMail: aotto1968 at users.berlios.de
#§  \attention  this software has GPL permissions to copy
#§              please contact AUTHORS for additional information
#§

05 Feb 2011: v NHI1-0.13, PLMK-2.2 und libmsgque-5.2

 -> "SqLite, one additional step in the right direction"

This release add persistent-transaction-support-part-1 and an improved factory-interface.
In addition some code/documentation errors were fixed.

The following commands were A)dded / D)eleted / C)hanged:

  A SqlSetDb,
  A FactoryCtxGet
  A FactoryCtxSet
  D FactoryCtxDefaultSet
  C FactoryNew
  C FactoryAdd
  C FactoryDefault
  A FactoryCopy
  A FactoryGet
  A FactoryGetCalled
  C SendT_START
  C SendT_END
  C ReadT_START


20 Jan 2010: v NHI1-0.12, PLMK-2.1 and libmsgque-5.1

This release embed "sqlite" support into the PLMK kernel.
As first step only the memory management is used.


14 Jan 2010: v NHI1-0.11, PLMK-2.0 and libmsgque-5.0

This release add support for the "Factory" design pattern.

The "Factory" is an important part of the object management and has the
following basic features:
 * create a new instance identified by an "Identifier" or using an already
   available instance as template
 * cleanup and delete an instance
 * provide an "Identifier" for factory lookup and as an unique application name
 * identify the server in the network
.
The link between the "Factory-Identifier" and the "Factory-Interface" is
important for the future development of "libmsgque". Message-Routing,
Service-Location and Persistent-Transactions depend on this feature.

The relationship between the "MqFactoryS" and the "MqS" is the same as the
relationship between a "type" and an "instance" of the "type" in a regular 
programming language.
The "MqFactoryS" define the "type" of the server and the "MqS" define a single