@@ -29,7 +29,7 @@ export PATH LD_LIBRARY_PATH TCLLIBPATH PYTHONPATH CLASSPATH MONO_PATH PERL5LIB
 
 
 PACKAGE='NHI1'
-PACKAGE_VERSION='0.13'
+PACKAGE_VERSION='0.14'
 PYTHON='python.exe'
 JAVA='java.exe'
 TCLSH='tclsh.exe'
